--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.curso.android.app.proyectofinal.compara_palabras'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.curso.android.app.proyectofinal.compara_palabras"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    //para el MVVM
+    buildFeatures{
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -38,6 +42,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //para el ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    //Live Data
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    //Para facilitar la creacion del ViewModel en la Activity
+    implementation 'androidx.activity:activity-ktx:1.7.2'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
